# quail

./: .gitignore  flake.nix  vm.nix
haxl-effectful/: haxl-effectful.cabal
haxl-effectful/src/Effectful/: Haxl.hs
hs-opentelemetry-api-aeson/: hs-opentelemetry-api-aeson.cabal
hs-opentelemetry-api-aeson/src/OpenTelemetry/Internal/Common/Types/: Aeson.hs
hs-opentelemetry-api-effectful/: hs-opentelemetry-api-effectful.cabal
hs-opentelemetry-api-effectful/src/Effectful/OpenTelemetry/: Log.hs  Trace.hs
opentelemetry-effectful/: opentelemetry-effectful.cabal
opentelemetry-effectful/src/Effectful/OpenTelemetry/: Log.hs  Trace.hs
quail-api/: quail-api.cabal
quail-api/assets/: schema.gql
quail-api/src/Data/Morpheus/: Extra.hs
quail-api/src/Quail/: Api.hs  GqlSchema.hs
quail-api/src/Servant/: Html.hs  Metrics.hs
quail-client/: quail-client.cabal
quail-client/src/Quail/: Client.hs
quail-client/test/: Main.hs
quail-server/: quail-server.cabal
quail-server/app/: Main.hs
quail-server/app/Quail/Server/: Files.hs  Gql.hs  Resolve.hs  SQLite.hs
quail-ui/: .ghcid  log.txt  quail-ui.cabal
quail-ui/app/: GraphQL.hs  Main.hs
quail-ui/app/Quail/: Run.hs
quail-ui/static/: index.html  index.js  style.css
vm/: alloy.nix  default.nix  grafana.nix  httpd.nix  loki.nix  prometheus.nix  tempo.nix
