cabal-version: 3.0
name: quail-client
version: 0.1.0.0
synopsis: Quail client
homepage: https://github.com/ners/quail/blob/main/README.md
license: Apache-2.0
author: ners
maintainer: ners@gmx.ch
bug-reports: https://github.com/ners/quail/issues
category: System
build-type: Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ners/quail

common common
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-all-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-name-shadowing

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    TemplateHaskell
    TypeFamilies
    ViewPatterns

library
  import: common
  hs-source-dirs: src
  cpp-options: -DGQL_SCHEMA_FILE="../quail-api/assets/schema.gql"
  build-depends:
    base,
    morpheus-graphql-client,
    quail-api,
    servant-client,
    text,

  exposed-modules:
    Quail.Client

test-suite test
  import: common
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base,
    morpheus-graphql-client,
    quail-client,
