cabal-version: 3.0
name: quail-server
version: 0.1.0.0
synopsis: Quail server
homepage: https://github.com/ners/quail/blob/main/README.md
license: Apache-2.0
author: ners
maintainer: ners@gmx.ch
bug-reports: https://github.com/ners/quail/issues
category: System
build-type: Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ners/quail

common common
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-all-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-name-shadowing

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    TemplateHaskell
    TypeFamilies
    ViewPatterns

executable quail-server
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  cpp-options: -DROOT_DIR="."
  build-depends:
    base,
    binary,
    bytestring,
    case-insensitive,
    containers,
    dhall,
    effectful,
    extra,
    filepath,
    generic-lens,
    hashable,
    haxl,
    haxl-effectful,
    http-types,
    lens,
    log-base,
    log-effectful,
    monad-logger,
    monad-metrics,
    morpheus-graphql,
    morpheus-graphql-server,
    morpheus-graphql-subscriptions,
    mtl,
    openapi3,
    quail-api,
    servant-effectful,
    servant-openapi3,
    servant-server,
    servant-swagger-ui,
    sqlite-simple,
    text,
    time,
    transformers,
    unliftio,
    unliftio-core,
    unordered-containers,
    wai,
    wai-websockets,
    warp,
    websockets,

  other-modules:
    Quail.Server.Gql
    Quail.Server.SQLite
